--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -119,6 +119,10 @@ a {
   -ms-transition: text-shadow 0.5s ease;
 }
 
+sub {
+	font-size:10px;
+}
+
 a:hover, a:focus {text-decoration: underline;}
 
 footer a {
