--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -119,8 +119,9 @@ a {
   -ms-transition: text-shadow 0.5s ease;
 }
 
-sup {
-	font-size:10px;
+sup { 
+    vertical-align: super;
+    font-size: smaller;
 }
 
 a:hover, a:focus {text-decoration: underline;}
