--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -84,14 +84,17 @@ h3 {
 
 h4 {
   font-size: 21px;
+  font-weight:300;
 }
 
 h5 {
   font-size: 18px;
+  font-weight:300;
 }
 
 h6 {
   font-size: 16px;
+  font-weight:300;
 }
 
 p {
@@ -101,6 +104,7 @@ p {
 
 footer p {
   color: #f2f2f2;
+  line-height: 1.0;
 }
 
 a {
@@ -129,7 +133,9 @@ a:hover, a:focus {text-decoration: underline;}
 
 footer a {
   color: #F2F2F2;
+/* 
   text-decoration: underline;
+ */
 }
 
 em {
