--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -14,7 +14,7 @@ html, body {
     margin: 0;
     padding: 0;
     background-color: #000000;
-    font-family: sans-serif;
+  font-family: 'Raleway', 'Calibri', Helvetica, Arial, sans-serif;
    -webkit-font-smoothing: antialiased; 
 }
 
